style(app): fix overflow issue

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,28 +1,25 @@
 @import '../../scss//global';
 
 .header {
+  width: 100%;
+  height: 10vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 1rem;
-  height: 8vh;
-  width: 100%;
-  z-index: 15;
-  top: 0;
-  background: #fff;
-  font-size: 14px;
+  
   @include small {
-    z-index:unset;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    width: calc(100% - 2rem);
-    margin: 1rem;
-    padding: 0 2rem;
-    justify-content: center;
+    padding: 1rem 2rem;
   }
-  @include large {
-    margin: 1rem 2rem;
-    width: calc(100% - 4rem);
+  .wrapper {
+    width:100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2;
+  }
+  @include medium {
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
   }
   &__logo {
     margin-right: auto;
