--- a/src/components/nav/Nav.module.scss
+++ b/src/components/nav/Nav.module.scss
@@ -12,7 +12,7 @@
   justify-content: space-evenly;
   align-items: center;
   transition: .2s;
-  z-index: 10;
+  z-index: 1;
 
   @include small{
     background: none;
